fixed issue with words being cut off in project descriptions.

--- a/assets/main.css
+++ b/assets/main.css
@@ -731,9 +731,24 @@ table td {
   transition: transform 0.3s, box-shadow 0.3s;
   display: flex;
   flex-direction: column;
+  height: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.project-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Distribute content evenly */
+}
+
+.project-item .project-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px; /* Adjust the height based on the space needed */
 }
 
 .project-item img {
@@ -748,21 +763,25 @@ table td {
 }
 
 .project-item .description {
-  max-height: 80px; /* Adjust this value as needed */
+  max-height: 120px; /* Adjust this value as needed */
   overflow: hidden;
   position: relative;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
   transition: max-height 0.3s ease;
 }
 
 .project-item .description.expanded {
   max-height: none;
+  white-space: normal;
+  -webkit-line-clamp: unset;
 }
 
 .project-item .read-more {
   cursor: pointer;
   color: #007bff; /* Adjust the color as needed */
   text-decoration: none;
-  display: inline-block;
+  display: none;
   margin-top: 10px;
 }
 
